# ai-pdf-learning-assistant

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
docs/: RAG_SCORING.md
docs/assets/: .gitkeep
src/: __init__.py  app_settings.example.py  bootstrap.py
src/config/: __init__.py  secrets_provider.py  settings.py
src/core/: __init__.py  constants.py  exceptions.py
src/prompts/: __init__.py  full_document.py  rag.py  summary.py
src/services/: __init__.py  document_service.py  llm_service.py  ports.py  rag_service.py
src/ui/: __init__.py  errors.py  main.py  session.py  styles.py  theme.py
src/ui/components/: chat_tab.py  sidebar.py  summary_tab.py
src/utils/: markdown.py  pdf.py  rag_scores.py  text.py  tokens.py
tests/: test_rag_scores.py  test_rag_service.py  test_tokens.py
