[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-learning-assistant"
version = "0.1.0"
description = "Streamlit PDF study assistant with summarization and LangChain/Chroma RAG Q&A"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.31.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
    "openai>=1.40.0",
    "markdown>=3.5",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-chroma>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "."]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
